--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,11 +18,11 @@
 \Reftrue
 \Toctrue
 
-\iftrue
+\iffalse
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1.5cm
 \else
-	\def\FootText{(VERSION 15)}
+	%\def\FootText{(VERSION 15)}
 \fi
 
 \def\pmt#1{{\tt #1}}
@@ -252,7 +252,7 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 \ListAbb{SWY}{Simplified West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase SWY}.}
 \ListAbb{T1}{Telescope 1}{A sub-detector of the TOTEM experiment, see \Sc{ttm det}.}
 \ListAbb{T2}{Telescope 2}{A sub-detector of the TOTEM experiment, see \Sc{ttm det}.}
-\ListAbb{TDR}{Technical Design Report}{}
+%\ListAbb{TDR}{Technical Design Report}{}
 \ListAbb{TOTEM}{TOTal and Elastic Measurements}{An LHC experiment devoted to the forward hadronic phenomena, see \Sc{ttm}.}
 \ListAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
 \ListAbb{VFAT}{Very Forward Atlas and Totem}{The front-end chip used to read out the TOTEM's detectors.}
