--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -46,6 +46,7 @@ Let us comment on the vertex terms (see \Eq{ttm lin par}) that might seem to be 
 
 \section[felm bckg]{Background}
 
+\kern-5mm
 \fig{fig/pdf/felm_cuts.pdf}{felm cuts}{The selection cuts (for the diagonal 45 bottom -- 56 top). The color scale follows logarithmically the bin contents in the order: white, blue, green, red and black.}
 
 The elastic-event-selection cuts for the final analysis have evolved compared to those used in \Sc{al elast}. At the end six cuts have been used, as shown in \Fg{felm cuts}. They are qualitatively similar to those presented in \Fg{al el selection}. The cut condition could be written as
@@ -261,16 +262,18 @@ The correction functions (compatible with the definition \Eq{felm unf fm sm corr
 \fig{fig/pdf/felm_unfolding_m2_corrections.pdf}{felm unfolding m2 corrections}{[7cm]The smearing correction functions as defined in \Fg{felm unfolding m2 scheme}.}
 \emfig
 
+\vskip-3mm
 \block{Method comparison}
 
 The fit-based and bin-based methods are compared in \Fg{felm unfolding m1m2 cmp}. Despite the large fluctuation of the bin-based result, a very good match is evident. The discrepancy at low $\th$ values is practically irrelevant because it falls below the analysis cut (drawn as the dashed line). We have only used the fit-based result (and its uncertainty) for the cross-section calculation. Nevertheless, we consider the bin-based result as a reassuring cross-check.
 
+\kern-5mm
 \fig{fig/pdf/felm_unfolding_m1m2_cmp.pdf}{felm unfolding m1m2 cmp}{A comparison of the fit-based and bin-based method (for diagonal 45 top -- 56 bottom and with $\si(\De\th) = 12\un{\mu rad}$).}
 
 
 
 
-\section[felm cmp]{Comparison to models}
+\section[felm cmp]{Results and comparison to models}
 
 The final cross-section distribution compared to the predictions of the models from \Sc{el models} and the model of Jenkovszky et al.~\bref{jenkovszky11} is shown in \Fg{ttm mod cmp dsdt}. The discriminative power of \abb{TOTEM}'s measurement is evident. In the region below the diffractive dip, $|t| \ls 0.5\un{GeV^2}$, there is a relatively good agreement among the models themselves and the measurement. But for momentum transfers $|t|$ between $0.5$ and $1\un{GeV^2}$ the models exhibit a rather large spread in their predictions (one and half orders). Moreover the measurement of \abb{TOTEM} does not favour any of the presented models. The measurement falls into a gap between two bands of predictions (one band is formed by the models of Islam et al., Petrov et al.~with two pomerons and Jenkovszky et al., the other band is formed by the models of Block et al., Bourrely et al.~and Petrov et al.~with three pomerons).
 
