--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -97,6 +97,7 @@ The system of Roman Pots (\abb{RP}s) consists of four stations as shown in \Fg{t
 
 In order to minimize the distance between the \abb{RP} edge facing the beam and the sensitive detector volumes, the \abb{RP}s are equipped with edgeless silicon detectors with current terminating structure (\abb{CTS}) \bref{ruggiero07}. This structure consists two rings. The current terminating ring collects the current generated in the highly damaged region at the cut edge (see \Fg{rp hybrid}), avoiding its diffusion into the sensitive volume. The clean-up ring prevents any further diffusion of this edge current into the sensitive area. With this technology the insensitive edge is reduced to about $50\un{\mu m}$.
 
+\eject
 The silicon sensors are single-sided $\rm p^+$-$\rm n$ micro-strip detectors with $512$ strips at a pitch $P = 66\un{\mu m}$, processed on very high resistivity
 %($> 10\un{k\Om\ cm}$)
 $n$-type silicon wafers. The strips are oriented at $45^\circ$ with respect to the edge facing the beam (the cut edge). The biasing voltage is of the order of $100\un{V}$. For better performance, the sensors are cooled down to a temperature about $-20^\circ\rm C$. The $512$ strip are read out by four \abb{VFAT} chips (see \bref{vfat}), that is $128$ channels each. For more details on the silicon sensors, we refer the reader to Sec.~4.3 in \bref{totem08}.
