--- a/2010/thesis/summary.tex
+++ b/2010/thesis/summary.tex
@@ -192,7 +192,7 @@
 \pdfdest name {AnnouncementPage} xyz
 \pdfoutline goto name {AnnouncementPage} count 0 {Announcement page}%
 
-%\TODO{Tato disertační práce byla vypracována v rámci interního doktorandského studia, které uchazeč absolvoval na Matematicko-fyzikální fakultě Univerzity Karlovy v Praze v letech 2005-2011}.
+Tato disertační práce byla vypracována v rámci doktorandského studia, které uchazeč absolvoval na Fyzikálním ústavu Akademie věd ČR, v.~v.~i., v letech 2005-2011.
 
 \vfil
 
@@ -201,16 +201,16 @@ Doktorand:			& Jan Kašpar\cr
 &\cr
 Školitel:			& RNDr.~Vojtěch Kundrát, DrSc.\cr
 &\cr
-Školící pracoviště:	& Fyzikální ústav Akademie věd, v.~v.~i. \cr
+Školící pracoviště:	& Fyzikální ústav Akademie věd ČR, v.~v.~i. \cr
 					& Na Slovance 1999/2, 182 21 Praha 8\cr
 &\cr
-Oponenti:			& ?? jméno ??\cr
-					& ?? katedra ??\cr
-					& ?? adresa ??\cr
+Oponenti:			& Mgr. Alexander Kupčo, Ph.D.\cr
+					& Fyzikální ústav Akademie věd ČR, v.~v.~i.\cr
+					& Na Slovance 1999/2, 182 21 Praha 8\cr
 &\cr
-					& ?? jméno ??\cr
-					& ?? katedra ??\cr
-					& ?? adresa ??\cr
+					& prof. RNDr. Michal Suk, DrSc.\cr
+					& Vědecká rada MFF UK\cr
+					& V Holešovičkách 2, 180 00 Praha 8\cr
 }
 
 \vfil
